[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["Vitaliy-datascientist <vitaliy.dayneko2410@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
